ISPN-4635 Query DSL should check against mixing objects created by different factories or builders