@@ -19,10 +19,36 @@
          <artifactId>jboss-logging</artifactId>
          <scope>provided</scope>
       </dependency>
+
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
       <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration combine.self="override">
+               <systemPropertyVariables>
+                  <log4j.configuration>${log4j.configuration}</log4j.configuration>
+                  <build.directory>${project.build.directory}</build.directory>
+               </systemPropertyVariables>
+               <trimStackTrace>false</trimStackTrace>
+               <argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
+            </configuration>
+            <dependencies>
+               <dependency>
+                  <groupId>org.apache.maven.surefire</groupId>
+                  <artifactId>surefire-junit4</artifactId>
+                  <version>${version.maven.surefire}</version>
+               </dependency>
+            </dependencies>
+         </plugin>
+
          <plugin>
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-bundle-plugin</artifactId>
